--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -6,6 +6,7 @@
   <title>Todo App with Backend</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="config.js"></script>
   <script src="app.js" defer></script>
 </head>
 <body>
