--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App with Backend</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="js.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="app.js" defer></script>
 </head>
